--- a/image.html
+++ b/image.html
@@ -152,7 +152,7 @@
 
 <!-- 改善されたフッターの追加 -->
 <footer style="text-align: center; margin-top: 30px; padding: 20px; background-color: #333; color: white;">
-    <p style="font-family: 'Arial', sans-serif; margin-bottom: 10px;">※ このサイトはAIツールを使用し、作成されています。</p>
+    <p style="font-family: 'Arial', sans-serif; margin-bottom: 10px;">※ このサイトはAIツールによる補助の元？、作成されています。</p>
     <p style="font-family: 'Arial', sans-serif; margin-bottom: 10px;">連絡先：</p>
     <a href="https://twitter.com/kinanao121" target="_blank" style="color: #1DA1F2; text-decoration: none;">
         <img src="https://pbs.twimg.com/profile_images/1612012278148390912/h3onR3We_400x400.jpg" alt="Twitter" style="width: 20px; vertical-align: middle;"> @kinanao121
