--- a/image.html
+++ b/image.html
@@ -30,7 +30,7 @@
 
 
 
-<!-- 改善されたフッターの追加 -->
+<!--フッター -->
 <footer style="text-align: center; margin-top: 30px; padding: 20px; background-color: #333; color: white;">
     <p style="font-family: 'Arial', sans-serif; margin-bottom: 10px;">※ このサイトはAIツールの補助の元、作成されています。</p>
     <p style="font-family: 'Arial', sans-serif; margin-bottom: 10px;">連絡先：</p>
